test/resources/valid/ImportBImportsC.flo
import './ImportC' as ImportC;

action UPDATE_USER = network(url = ImportC.UPDATE_USERS_URL, method = 'PUT');