test/resources/invalid/parse/ImportAImportsC.flo
import './ImportC' as ImportC;

action GET_ALL_USERS = network(url = ImportC.USERS_URL, method = 'GET');
